--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ADI Cuneo - Chiesa Cristiana Evangelica</title>
-  <link rel="stylesheet" href="st.css">
+  <link rel="stylesheet" href="css/st.css">
 </head>
 <body>
 <header class="header">
@@ -20,7 +20,7 @@
         <li><a href="gallery.html">Galleria Foto</a></li>
         <li><a href="eventi.html">Eventi</a></li>
       </ul>
-      <div class="header__quick">
+      <div class="header__menu">
         <a href="#contatti">Contatti</a>
         <div class="icon-hamburger">
           <span></span>
