orario, contatti allineamento

--- a/illuminiamo.html
+++ b/illuminiamo.html
@@ -349,11 +349,11 @@
       <ul class="header__menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#chi-siamo">Chi siamo</a></li>
-        <li><a href="#"><img src="img/lampadina.png" alt="Lampadina" height="40" width="40"></a></li>
-        <li><a href="gallery.html">Galleria Foto</a></li>
+        <li><a href="illuminiamo.html"><img src="img/lampadina.png" alt="Lampadina" height="40px" width="40px"></a></li>
+        <li><a href="gallery.html" class="active">Galleria Foto</a></li>
         <li><a href="eventi.html">Eventi</a></li>
       </ul>
-      <div class="header__quick">
+      <div class="header__menu">
         <a href="#contatti">Contatti</a>
         <div class="icon-hamburger">
           <span></span>
@@ -478,8 +478,8 @@
     <div class="col-50">
       <h3>Orari</h3>
       <p>Domenica: 10:30 - 12:30</p>
-      <p>Martedì: 19:00 - 20:30</p>
-      <p>Giovedì: 20:00 - 21:30</p>
+      <p>Martedì: 20:30 - 21:30</p>
+      <p>Giovedì: 20:30 - 21:30</p>
       <a href="gallery.html" class="button">Visita la nostra galleria</a>
       <br>
       <p>Visita le nostra pagine</p>
