--- a/gallery.html
+++ b/gallery.html
@@ -553,7 +553,7 @@
         <li><a href="gallery.html" class="active">Galleria Foto</a></li>
         <li><a href="eventi.html">Eventi</a></li>
       </ul>
-      <div class="header__quick">
+      <div class="header__menu">
         <a href="index.html#contatti">Contatti</a>
         <div class="icon-hamburger">
           <span></span>
@@ -657,8 +657,8 @@
     <div class="col-50">
       <h3>Orari</h3>
       <p>Domenica: 10:30 - 12:30</p>
-      <p>Martedì: 19:00 - 20:30</p>
-      <p>Giovedì: 20:00 - 21:30</p>
+      <p>Martedì: 20:30 - 21:30</p>
+      <p>Giovedì: 20:30 - 21:30</p>
       <a href="gallery.html" class="button">Visita la nostra galleria</a>
       <br>
       <p>Visita le nostra pagine</p>
