miglioramento allinamento contatti

--- a/eventi.html
+++ b/eventi.html
@@ -7,22 +7,29 @@
   <title>Eventi - ADI Cuneo</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>ADI Cuneo - Chiesa Cristiana Evangelica</title>
+  <link rel="stylesheet" href="css/st.css">
 </head>
 <body>
-  <header class="header">
+<header class="header">
     <div class="header__content">
-      <a class="header__logo" href="index.html">
-        <img src="img\logo_adi_cuneo.png" alt="Logo ADI Cuneo" height="100px" width="100px">
+      <a class="header__logo" href="#">
+        <img src="img/logo_adi_cuneo.png" alt="Logo ADI Cuneo" height="100px" width="100px">
       </a>
       <ul class="header__menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#chi-siamo">Chi siamo</a></li>
+        <li><a href="#chi-siamo">Chi siamo</a></li>
         <li><a href="illuminiamo.html"><img src="img/lampadina.png" alt="Lampadina" height="40px" width="40px"></a></li>
-        <li><a href="gallery.html" class="active">Galleria Foto</a></li>
+        <li><a href="gallery.html">Galleria Foto</a></li>
         <li><a href="eventi.html">Eventi</a></li>
       </ul>
       <div class="header__menu">
-        <a href="index.html#contatti">Contatti</a>
+        <a href="#contatti">Contatti</a>
         <div class="icon-hamburger">
           <span></span>
           <span></span>
