--- a/illuminiamo.html
+++ b/illuminiamo.html
@@ -338,19 +338,24 @@
       transform: translateY(0);
     }
   </style>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>ADI Cuneo - Chiesa Cristiana Evangelica</title>
+  <link rel="stylesheet" href="css/st.css">
 </head>
 <body>
-  <!-- Header uguale al tuo originale -->
-  <header class="header">
+<header class="header">
     <div class="header__content">
-      <a class="header__logo" href="index.html">
-        <img src="img/logo_adi_cuneo.png" alt="Logo ADI Cuneo" height="100" width="100">
+      <a class="header__logo" href="#">
+        <img src="img/logo_adi_cuneo.png" alt="Logo ADI Cuneo" height="100px" width="100px">
       </a>
       <ul class="header__menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#chi-siamo">Chi siamo</a></li>
+        <li><a href="#chi-siamo">Chi siamo</a></li>
         <li><a href="illuminiamo.html"><img src="img/lampadina.png" alt="Lampadina" height="40px" width="40px"></a></li>
-        <li><a href="gallery.html" class="active">Galleria Foto</a></li>
+        <li><a href="gallery.html">Galleria Foto</a></li>
         <li><a href="eventi.html">Eventi</a></li>
       </ul>
       <div class="header__menu">
