--- a/illuminiamo.html
+++ b/illuminiamo.html
@@ -353,8 +353,8 @@
       </a>
       <ul class="header__menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#chi-siamo">Chi siamo</a></li>
-        <li><a href="illuminiamo.html"><img src="img/lampadina.png" alt="Lampadina" height="40px" width="40px"></a></li>
+        <li><a href="storia.html">La Nostra Storia</a></li>
+        <li><a href="illuminiamo.html" style="display: flex; align-items: center; justify-content: center;"><img src="img/lampadina.png" alt="Lampadina" height="40px" width="40px"></a></li>
         <li><a href="gallery.html">Galleria Foto</a></li>
         <li><a href="eventi.html">Eventi</a></li>
       </ul>
