immagine di sfondo, miglioramento css

--- a/gallery.html
+++ b/gallery.html
@@ -49,40 +49,40 @@
 
   <div class="gallery">
     <div class="gallery-item" data-category="culti">
-      <img src="img/Sfondo alto.jpg" alt="Culto domenicale" data-title="Culto Domenicale">
+      <img src="img/principale.png" alt="Culto domenicale" data-title="Culto Domenicale">
     </div>
     <div class="gallery-item" data-category="eventi">
-      <img src="img/Sfondo alto.jpg" alt="Evento speciale" data-title="Evento Speciale">
+      <img src="img/principale.png" alt="Evento speciale" data-title="Evento Speciale">
     </div>
     <div class="gallery-item" data-category="attivita">
-      <img src="img/Sfondo alto.jpg" alt="Attività giovani" data-title="Attività Giovani">
+      <img src="img/principale.png" alt="Attività giovani" data-title="Attività Giovani">
     </div>
     <div class="gallery-item" data-category="culti">
-      <img src="img/Sfondo alto.jpg" alt="Momento di preghiera" data-title="Momento di Preghiera">
+      <img src="img/principale.png" alt="Momento di preghiera" data-title="Momento di Preghiera">
     </div>
     <div class="gallery-item" data-category="eventi">
-      <img src="img/Sfondo alto.jpg" alt="Conferenza biblica" data-title="Conferenza Biblica">
+      <img src="img/principale.png" alt="Conferenza biblica" data-title="Conferenza Biblica">
     </div>
     <div class="gallery-item" data-category="attivita">
-      <img src="img/Sfondo alto.jpg" alt="Gruppo musicale" data-title="Gruppo Musicale">
+      <img src="img/principale.png" alt="Gruppo musicale" data-title="Gruppo Musicale">
     </div>
     <div class="gallery-item" data-category="culti">
-      <img src="img/Sfondo alto.jpg" alt="Studio biblico" data-title="Studio Biblico">
+      <img src="img/principale.png" alt="Studio biblico" data-title="Studio Biblico">
     </div>
     <div class="gallery-item" data-category="eventi">
-      <img src="img/Sfondo alto.jpg" alt="Evento comunitario" data-title="Evento Comunitario">
+      <img src="img/principale.png" alt="Evento comunitario" data-title="Evento Comunitario">
     </div>
     <div class="gallery-item" data-category="attivita">
-      <img src="img/Sfondo alto.jpg" alt="Attività bambini" data-title="Attività Bambini">
+      <img src="img/principale.png" alt="Attività bambini" data-title="Attività Bambini">
     </div>
     <div class="gallery-item" data-category="eventi">
-      <img src="img/Sfondo alto.jpg" alt="Battesimi" data-title="Battesimi">
+      <img src="img/principale.png" alt="Battesimi" data-title="Battesimi">
     </div>
     <div class="gallery-item" data-category="attivita">
-      <img src="img/Sfondo alto.jpg" alt="Servizio alla comunità" data-title="Servizio alla Comunità">
+      <img src="img/principale.png" alt="Servizio alla comunità" data-title="Servizio alla Comunità">
     </div>
     <div class="gallery-item" data-category="culti">
-      <img src="img/Sfondo alto.jpg" alt="Adorazione" data-title="Adorazione">
+      <img src="img/principale.png" alt="Adorazione" data-title="Adorazione">
     </div>
   </div>
 
