--- a/eventi.html
+++ b/eventi.html
@@ -36,7 +36,7 @@
   </div>
 </header>
 
-  <div class="cover" style="background-image:linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.6)), url(img/Sfondo\ alto.jpg);">
+  <div class="cover" style="background-image:linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.6)), url(img/principale.png); background-position: center 20%; background-size: cover;">
     <div class="cover__content">
       <h1>Prossimi Eventi</h1>
       <h2>ADI Cuneo</h2>
