--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
   </div>
 </header>
 
-  <div class="cover" style="background-image:linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.6)), url(img/Sfondo\ alto.jpg);">
-    <div class="cover__content">
-      <h1>Chiesa Cristiana Evangelica</h1>
-      <h2>ADI Cuneo</h2>
-      <p style="font-size:26px; line-height:1.67em;">
-        <span style="font-style:italic;">
-          "Poichè io conosco i pensieri che medito per voi", dice l'Eterno, "pensieri di pace e non di male, per darvi un futuro e una speranza."
-        </span>
-        <br>
-        <span style="color: var(--gold); font-weight: bold;">Geremia 29:11</span>
-      </p>
-      <a href="#chi-siamo" class="button">Scopri di più</a>
-    </div>
+<div class="cover" style="background-image:linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.6)), url(img/principale.png); background-position: center 20%; background-size: cover;">
+  <div class="cover__content">
+    <h1>Chiesa Cristiana Evangelica</h1>
+    <h2>ADI Cuneo</h2>
+    <p style="font-size:26px; line-height:1.67em;">
+      <span style="font-style:italic;">
+        "Poichè io conosco i pensieri che medito per voi", dice l'Eterno, "pensieri di pace e non di male, per darvi un futuro e una speranza."
+      </span>
+      <br>
+      <span style="color: var(--gold); font-weight: bold;">Geremia 29:11</span>
+    </p>
+    <a href="#chi-siamo" class="button">Scopri di più</a>
   </div>
+</div>
 
   <div class="grid pt-3" id="chi-siamo">
     <div class="col-50">
