modifica foto e css arrangiamento fix

--- a/gallery.html
+++ b/gallery.html
@@ -42,47 +42,31 @@
 
   <div class="category-filter">
     <button class="filter-button active" data-filter="all">Tutti</button>
-    <button class="filter-button" data-filter="eventi">Eventi</button>
-    <button class="filter-button" data-filter="culti">Culti</button>
-    <button class="filter-button" data-filter="attivita">Attività</button>
+    <button class="filter-button" data-filter="battesimi">Battesimi</button>
+    <button class="filter-button" data-filter="giovani">Giovani</button>
   </div>
 
   <div class="gallery">
-    <div class="gallery-item" data-category="culti">
-      <img src="img/principale.png" alt="Culto domenicale" data-title="Culto Domenicale">
+    <div class="gallery-item" data-category="battesimi">
+      <img src="img/battesimi 1.JPG" alt="Culto domenicale" data-title="Domenica di battesimi">
     </div>
-    <div class="gallery-item" data-category="eventi">
-      <img src="img/principale.png" alt="Evento speciale" data-title="Evento Speciale">
+    <div class="gallery-item" data-category="battesimi">
+      <img src="img/battesimi 2.JPG" alt="Evento speciale" data-title="Domenica di battesimi">
     </div>
-    <div class="gallery-item" data-category="attivita">
-      <img src="img/principale.png" alt="Attività giovani" data-title="Attività Giovani">
+    <div class="gallery-item" data-category="battesimi">
+      <img src="img/battesimi 3.JPG" alt="Attività giovani" data-title="Domenica di battesimi">
     </div>
-    <div class="gallery-item" data-category="culti">
-      <img src="img/principale.png" alt="Momento di preghiera" data-title="Momento di Preghiera">
+    <div class="gallery-item" data-category="battesimi">
+      <img src="img/battesimi 4.JPG" alt="Momento di preghiera" data-title="Domenica di battesimi">
     </div>
-    <div class="gallery-item" data-category="eventi">
-      <img src="img/principale.png" alt="Conferenza biblica" data-title="Conferenza Biblica">
+    <div class="gallery-item" data-category="giovani">
+      <img src="img/giovani 1.JPG" alt="Conferenza biblica" data-title="Attività Giovani">
     </div>
-    <div class="gallery-item" data-category="attivita">
-      <img src="img/principale.png" alt="Gruppo musicale" data-title="Gruppo Musicale">
+    <div class="gallery-item" data-category="giovani">
+      <img src="img/giovani 2.JPG" alt="Gruppo musicale" data-title="Attività Giovani">
     </div>
-    <div class="gallery-item" data-category="culti">
-      <img src="img/principale.png" alt="Studio biblico" data-title="Studio Biblico">
-    </div>
-    <div class="gallery-item" data-category="eventi">
-      <img src="img/principale.png" alt="Evento comunitario" data-title="Evento Comunitario">
-    </div>
-    <div class="gallery-item" data-category="attivita">
-      <img src="img/principale.png" alt="Attività bambini" data-title="Attività Bambini">
-    </div>
-    <div class="gallery-item" data-category="eventi">
-      <img src="img/principale.png" alt="Battesimi" data-title="Battesimi">
-    </div>
-    <div class="gallery-item" data-category="attivita">
-      <img src="img/principale.png" alt="Servizio alla comunità" data-title="Servizio alla Comunità">
-    </div>
-    <div class="gallery-item" data-category="culti">
-      <img src="img/principale.png" alt="Adorazione" data-title="Adorazione">
+    <div class="gallery-item" data-category="giovani">
+      <img src="img/giovani 3.JPG" alt="Studio biblico" data-title="Attività Giovani">
     </div>
   </div>
 
