--- a/illuminiamo.html
+++ b/illuminiamo.html
@@ -46,7 +46,8 @@
 
   <div class="hero-content">
     <h1>Illuminiamo Insieme</h1>
-    <p>Un progetto speciale dove la luce diventa speranza, crescita e condivisione per bambini e famiglie</p>
+    <p>«Lasciate che i bambini vengano a me e non glielo impedite; perché il regno di Dio è per chi assomiglia a loro.»</p>
+    <p>Marco 10:14</p>
     <a href="#content" class="discover-btn">Scopri di Più</a>
   </div>
 
@@ -59,11 +60,12 @@
     <div class="content-grid">
       <div class="content-text hidden">
         <h2>Illuminiamo Insieme</h2>
-        <p>Un progetto speciale pensato per i bambini e le loro famiglie, dove la luce diventa metafora di speranza, crescita e condivisione.</p>
+        <p>«Lasciate che i bambini vengano a me e non glielo impedite; perché il regno di Dio è per chi assomiglia a loro.»</p>
+        <p>Marco 10:14</p>
         
         <h3>Cosa è Illuminiamo Insieme?</h3>
-        <p>È un percorso educativo e ludico che coinvolge i più giovani in attività creative, laboratori e momenti di aggregazione.</p>
-        
+        <p>È un percorso educativo e ludico che coinvolge i più giovani in attività creative, laboratori e momenti di compagina.</p>
+
         <h3>I Nostri Obiettivi</h3>
         <ul>
           <li>Sviluppare la creatività attraverso laboratori artistici</li>
