--- a/storia.html
+++ b/storia.html
@@ -51,9 +51,10 @@
   <div class="col-50">
     <h2>Le Nostre Origini</h2>
     <h3>I Primi Passi della Fede</h3>
-    <p>La storia di ADI Cuneo inizia negli anni '80, quando un piccolo gruppo di credenti si riuniva nelle case private per pregare e studiare la Parola di Dio. Erano tempi di grande fervore spirituale, caratterizzati da una profonda ricerca della presenza di Dio.</p>
-    <p>Questi primi fratelli e sorelle nella fede sentivano nel cuore il desiderio di condividere l'amore di Cristo con la città di Cuneo. Le riunioni domestiche divennero sempre più numerose, fino a quando si rese necessario trovare un luogo più ampio per accogliere tutti coloro che desideravano conoscere Gesù.</p>
-    <p>È in questo contesto di crescita spirituale e numerica che nacque l'idea di costituire ufficialmente una comunità evangelica pentecostale affiliata alle Assemblee di Dio in Italia.</p>
+    <p>La nostra comunità è parte integrante di un’associazione di chiese chiamata Assemblee di Dio in Italia (ADI),</p>
+    <p>un Ente Morale di Culto riconosciuto dallo Stato (D.P.R. 5 dicembre 1959, n. 1349; legge 22 novembre 1988, n. 517).</p>
+    <p>La comunità nasce agli inizi degli anni ’80 dalla volontà del pastore della comunità di Ventimiglia, che ebbe a cuore di venire a evangelizzare la città di Cuneo.</p>
+    <p>Nel frattempo, una famiglia iniziò ad aprire il proprio cuore all’Evangelo e, di conseguenza, anche le porte della propria casa, dove si tennero le prime riunioni di preghiera.</p>
   </div>
   <div class="col-50">
     <div class="storia-image">
@@ -72,9 +73,9 @@
   <div class="col-50">
     <h2>Anni di Crescita</h2>
     <h3>Consolidamento e Sviluppo</h3>
-    <p>Negli anni '90 e 2000, la comunità ADI Cuneo ha vissuto un periodo di grande crescita e consolidamento. L'acquisizione della sede in Via Acceglio ha segnato una tappa fondamentale, permettendo alla chiesa di avere un punto di riferimento stabile per la comunità cuneese.</p>
-    <p>Durante questi anni sono stati avviati numerosi ministeri: il coro, i gruppi di studio biblico per diverse fasce d'età, il ministero giovanile e quello per bambini. La chiesa ha iniziato anche ad essere attiva sul territorio con opere di beneficenza e sostegno alle famiglie in difficoltà.</p>
-    <p>Molte famiglie hanno trovato nella nostra comunità non solo un luogo di culto, ma una vera famiglia spirituale dove crescere insieme nella fede e condividere gioie e difficoltà della vita quotidiana.</p>
+    <p>Da lì “il fuoco spirituale divampò” fino ad arrivare ai giorni nostri, dando vita a una realtà sana, che ha in cuore di onorare l’Evangelo in tutta la sua interezza.</p>
+    <p>La nostra presenza sul territorio di Cuneo non ha l’obiettivo di creare centri ricreativi,</p>
+    <p>ma di offrire un luogo semplice e autentico dove chiunque possa trovare un vero ristoro per l’anima e per lo spirito, altrimenti languenti.</p>
   </div>
 </div>
 
@@ -83,9 +84,10 @@
   <div class="col-50">
     <h2>Oggi e il Futuro</h2>
     <h3>Nuove Sfide, Stessa Fede</h3>
-    <p>Oggi ADI Cuneo è una comunità consolidata che conta decine di famiglie attive. Abbiamo attraversato molte stagioni, alcune di grande benedizione, altre di prova, ma sempre sostenuti dalla certezza che Dio ha un piano per la nostra chiesa e per la città di Cuneo.</p>
-    <p>Negli ultimi anni abbiamo abbracciato le nuove tecnologie per raggiungere più persone possibile con il messaggio del Vangelo. Abbiamo una presenza attiva sui social media e organizziamo eventi che coinvolgono l'intera comunità cittadina.</p>
-    <p>Il nostro sguardo è rivolto al futuro con fiducia: continuiamo a pregare per un risveglio spirituale nella nostra città e lavoriamo ogni giorno per essere testimoni credibili dell'amore di Cristo. La nostra visione rimane quella di vedere vite trasformate dalla potenza del Vangelo.</p>
+    <p>L’essere umano, infatti, da sempre si pone domande ed è alla ricerca di risposte vere e profonde: in questo cammino nessuno è solo,</p>
+    <p>perché qui troverà una comunità pronta ad accogliere con affetto e a condividere il messaggio di speranza che cambia la vita. Ebbene,</p>
+    <p>l’Evangelo predicato in mezzo a noi, in modo integrale e senza alcuna edulcorazione,</p>
+    <p>continua a dare queste risposte e a portare luce, pace e gioia nei cuori.</p>
     <a href="index.html#chi-siamo" class="button">Unisciti alla Nostra Storia</a>
   </div>
   <div class="col-50">
@@ -128,18 +130,10 @@
     </div>
     
     <div class="timeline-item">
-      <div class="timeline-year">2010</div>
+      <div class="timeline-year">2024</div>
       <div class="timeline-content">
-        <h4>Espansione Ministeri</h4>
-        <p>Avvio di nuovi ministeri per tutte le fasce d'età</p>
-      </div>
-    </div>
-    
-    <div class="timeline-item">
-      <div class="timeline-year">2020</div>
-      <div class="timeline-content">
-        <h4>Era Digitale</h4>
-        <p>Adozione delle nuove tecnologie e presenza online</p>
+        <h4>Inizio progetto</h4>
+        <p>Inizio riunioni progetto illuminiamo</p>
       </div>
     </div>
   </div>
