css per immagini

--- a/gallery.html
+++ b/gallery.html
@@ -68,6 +68,9 @@
     <div class="gallery-item" data-category="giovani">
       <img src="img/giovani 3.JPG" alt="Studio biblico" data-title="Attività Giovani">
     </div>
+    <div class="gallery-item" data-category="battesimi">
+      <img src="img/Sfondo alto.jpg" alt="Studio biblico" data-title="Attività Giovani">
+    </div>
   </div>
 
   <!-- Lightbox -->
