--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
       <img src="img/giovani 3.JPG" alt="Studio biblico" data-title="Attività Giovani">
     </div>
     <div class="gallery-item" data-category="battesimi">
-      <img src="img/Sfondo alto.jpg" alt="Studio biblico" data-title="Attività Giovani">
+      <img src="img/principale.png" alt="Studio biblico" data-title="Attività Giovani">
     </div>
   </div>
 
