--- a/storia.html
+++ b/storia.html
@@ -58,7 +58,7 @@
   </div>
   <div class="col-50">
     <div class="storia-image">
-      <img src="img/storia-origini.jpg" alt="Le origini della chiesa" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+      <img src="img/cuneo vecchia 1.jpeg" alt="Le origini della chiesa" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
     </div>
   </div>
 </div>
@@ -67,7 +67,7 @@
 <div class="grid pt-3">
   <div class="col-50">
     <div class="storia-image">
-      <img src="img/storia-crescita.jpg" alt="La crescita della comunità" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+      <img src="img/cuneo 2.jpeg" alt="La crescita della comunità" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
     </div>
   </div>
   <div class="col-50">
@@ -92,7 +92,7 @@
   </div>
   <div class="col-50">
     <div class="storia-image">
-      <img src="img/storia-futuro.jpg" alt="Il futuro della comunità" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+      <img src="img/cuneo 3.jpeg" alt="Il futuro della comunità" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
     </div>
   </div>
 </div>
