illimiamo e descrzioni index

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <a href="#appuntamenti" class="button mb-2">I NOSTRI APPUNTAMENTI</a>
     </div>
     <div class="col-50">
-      <p>La nostra comunità è fondata sui principi biblici e sulla fede in Gesù Cristo come Salvatore personale. Crediamo nella potenza salvifica della Bibbia e nell'importanza di vivere secondo i suoi principi.</p>
+      <p>La nostra comunità è fondata sui principi biblici e sulla fede in Gesù Cristo come personale Salvatore. l’Evangelo predicato in mezzo a noi, in modo integrale e senza alcuna edulcorazione, continua a dare queste risposte e a portare luce, pace e gioia nei cuori.</p>
       <p>Offriamo diverse attività e incontri durante la settimana, aperti a tutti coloro che desiderano conoscere meglio la Parola di Dio e crescere nella fede.</p>
     </div>
   </div>
@@ -73,19 +73,19 @@
         <div class="evento">
           <div class="evento-data">Domenica, 10:30</div>
           <h3>Culto di Adorazione</h3>
-          <p>Il nostro servizio domenicale principale include lode, preghiera e insegnamento biblico per tutta la famiglia.</p>
+          <p>Aperto a tutti coloro che desiderano conoscere personalmente il Signore, tramite la predicazione delle Parola di Dio, <strong>Ebrei 12:28</strong>.</p>
         </div>
         
         <div class="evento">
           <div class="evento-data">Martedì, 20:30</div>
           <h3>Riunione di Preghiera</h3>
-          <p>Un'occasione per riunirsi in preghiera, adorazione e condivisione fraterna.</p>
+          <p>Un occasione per pregare insieme ai fratelli e alle sorelle, come dice la Bibbia, "Pregate in ogni tempo", <strong>Efesini 6:18</strong>.</p>
         </div>
         
         <div class="evento">
           <div class="evento-data">Giovedì, 20:30</div>
           <h3>Studio Biblico</h3>
-          <p>Un momento dedicato all'approfondimento della Parola di Dio attraverso lo studio sistematico delle Scritture.</p>
+          <p>Un momento dedicato all'approfondimento della Parola di Dio attraverso lo studio sistematico delle Scritture, <strong>Proverbi 4:5</strong>.</p>
         </div>
       </div>
     </div>
