--- a/illuminiamo.html
+++ b/illuminiamo.html
@@ -39,7 +39,7 @@
 
     <!-- Video Hero Section -->
 <section class="video-hero" id="home">
-  <video class="hero-video" autoplay muted loop playsinline poster="img/illumiamo testata.png">
+  <video class="hero-video" autoplay muted loop playsinline poster="img/illuminiamo testata.png">
     <source src="video/agrimontana_naturaV6_final.mp4" type="video/mp4">
     Il tuo browser non supporta i video HTML5.
   </video>
