--- a/eventi.html
+++ b/eventi.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="evento">
-          <div class="evento-data">Sabato, 27 Settembre 2025, 17:30</div>
+          <div class="evento-data">Giovedì, 30 Ottobre 2025</div>
           <h3>ADI - IBI Fiuggi (RO)</h3>
           <p>La chiesa in Cuneo sarà presso Fiuggi per il Raduno nazionale giovanile delle chiese ADI</p>
         </div>
