--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="col-50">
       <h1>Chi Siamo</h1>
       <h3>ADI Cuneo</h3>
-      <p>ADI Cuneo è una comunità cristiana evangelica pentecostale affiliata alle Assemblee di Dio in Italia (ADI). La nostra visione è di condividere l'amore di Cristo e il messaggio della Bibbia con la comunità locale.</p>
+      <p>ADI Cuneo è una comunità cristiana evangelica pentecostale parte della famiglia delle Assemblee di Dio in Italia (ADI). La nostra visione è di condividere l'amore di Cristo e il messaggio della Bibbia con la comunità locale.</p>
       <p>Siamo un gruppo di credenti impegnati nella crescita spirituale, nel servizio alla comunità e nella diffusione del Vangelo.</p>
       <a href="#appuntamenti" class="button mb-2">I NOSTRI APPUNTAMENTI</a>
     </div>
