--- a/storia.html
+++ b/storia.html
@@ -132,7 +132,7 @@
     <div class="timeline-item">
       <div class="timeline-year">2024</div>
       <div class="timeline-content">
-        <h4>Inizio progetto</h4>
+        <h4>Inizio progetto IlluminiAMO</h4>
         <p>Inizio riunioni progetto illuminiamo</p>
       </div>
     </div>
