--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,7 @@
     <button class="filter-button active" data-filter="all">Tutti</button>
     <button class="filter-button" data-filter="battesimi">Battesimi</button>
     <button class="filter-button" data-filter="giovani">Giovani</button>
+    <button class="filter-button" data-filter="illuminiamo">Illuminiamo</button>
   </div>
 
   <div class="gallery">
@@ -70,6 +71,15 @@
     </div>
     <div class="gallery-item" data-category="battesimi">
       <img src="img/principale.png" alt="Studio biblico" data-title="Attività Giovani">
+    </div>
+    <div class="gallery-item" data-category="illuminiamo">
+      <img src="img/orizzonatale lato.jpg" alt="ill" data-title="Attività illuminiamo">
+    </div>
+    <div class="gallery-item" data-category="illuminiamo">
+      <img src="img/orizzonatale con pastore.jpg" alt="ill" data-title="Attività illuminiamo">
+    </div>
+    <div class="gallery-item" data-category="illuminiamo">
+      <img src="img/fantasmino.jpg" alt="ill" data-title="Attività illuminiamo">
     </div>
   </div>
 
