--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
     <button class="filter-button active" data-filter="all">Tutti</button>
     <button class="filter-button" data-filter="battesimi">Battesimi</button>
     <button class="filter-button" data-filter="giovani">Giovani</button>
-    <button class="filter-button" data-filter="illuminiamo">Illuminiamo</button>
+    <button class="filter-button" data-filter="illuminiamo">IlluminiAMO</button>
   </div>
 
   <div class="gallery">
@@ -80,6 +80,9 @@
     </div>
     <div class="gallery-item" data-category="illuminiamo">
       <img src="img/fantasmino.jpg" alt="ill" data-title="Attività illuminiamo">
+    </div>
+    <div class="gallery-item" data-category="illuminiamo">
+      <img src="img/illimcopertina.jpg" alt="ill" data-title="Attività illuminiamo">
     </div>
   </div>
 
