index e gallery per ill

--- a/gallery.html
+++ b/gallery.html
@@ -84,6 +84,12 @@
     <div class="gallery-item" data-category="illuminiamo">
       <img src="img/illimcopertina.jpg" alt="ill" data-title="Attività illuminiamo">
     </div>
+    <div class="gallery-item" data-category="illuminiamo">
+      <img src="img/sfondo_ill_intero.jpg" alt="ill" data-title="Attività illuminiamo">
+    </div>
+    <div class="gallery-item" data-category="illuminiamo">
+      <img src="img/sfondo_ill_pulpito.jpg" alt="ill" data-title="Attività illuminiamo">
+    </div>
   </div>
 
   <!-- Lightbox -->
