--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
     </div>
     <div class="col-50">
-      <div class="cover" style="background-image:linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.6)), url(img/illiminiamo\ evento.jpg);">
+      <div class="cover" style="background-image:linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.6)), url(img/illimcopertina.jpg);">
         <div class="cover__content">
           <h1>Unisciti a Noi</h1>
           <h2>Sei il Benvenuto</h2>
