--- a/eventi.html
+++ b/eventi.html
@@ -60,9 +60,9 @@
         </div>
 
         <div class="evento">
-          <div class="evento-data">Giovedì, 30 Ottobre 2025</div>
-          <h3>ADI - IBI Fiuggi (RO)</h3>
-          <p>La chiesa in Cuneo sarà presso Fiuggi per il Raduno nazionale giovanile delle chiese ADI</p>
+          <div class="evento-data">Sabato, 15 novembre, 9:45</div>
+          <h3>Evangelizzazione città di Caraglio</h3>
+          <p>Si terrà un'Evangelizzazione nella città di Caraglio, fino alle ore 12:00, in Via Roma presso la Fontana delle Grazie</p>
         </div>
       </div>
     </div>
