--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
     
     <!-- SPOSTA IL MENU HAMBURGER FUORI DAL DIV MENU -->
     <div class="header__quick">
-      <a href="#contatti" class="desktop-only">Contatti</a>  <!-- SOLO SU DESKTOP -->
+      <a href="contatti.html" class="desktop-only">Contatti</a>  <!-- SOLO SU DESKTOP -->
     </div>
     
     <!-- MENU HAMBURGER SEPARATO -->
