--- a/illuminiamo.html
+++ b/illuminiamo.html
@@ -24,8 +24,9 @@
     
     <!-- SPOSTA IL MENU HAMBURGER FUORI DAL DIV MENU -->
     <div class="header__quick">
-      <a href="#contatti" class="desktop-only">Contatti</a>  <!-- SOLO SU DESKTOP -->
+      <a href="contatti.html" class="desktop-only">Contatti</a>  <!-- SOLO SU DESKTOP -->
     </div>
+
     
     <!-- MENU HAMBURGER SEPARATO -->
     <div class="icon-hamburger">
