--- a/illuminiamo.html
+++ b/illuminiamo.html
@@ -19,7 +19,7 @@
     <li><a href="illuminiamo.html" style="display: flex; align-items: center; justify-content: center;"><img src="img/lampadina.png" alt="Lampadina" height="40px" width="40px"></a></li>
     <li><a href="gallery.html">Galleria Foto</a></li>
     <li><a href="eventi.html">Eventi</a></li>
-    <li><a href="#contatti" class="mobile-only">Contatti</a></li>  <!-- SOLO SU MOBILE -->
+    <li><a href="contatti.html" class="mobile-only">Contatti</a></li>  <!-- SOLO SU MOBILE -->
   </ul>
     
     <!-- SPOSTA IL MENU HAMBURGER FUORI DAL DIV MENU -->
