--- a/contatti.html
+++ b/contatti.html
@@ -18,7 +18,8 @@
       <ul class="header__menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="storia.html">La Nostra Storia</a></li>
-        <li><a href="illuminiamo.html" style="display: flex; align-items: center; justify-content: center;"><img src="img/lampadina.png" alt="Lampadina" height="40px" width="40px"></a></li>
+        <li><a href="illuminiamo.html" style="display: flex; align-items: center; justify-content: center;"><img
+              src="img/lampadina.png" alt="Lampadina" height="40px" width="40px"></a></li>
         <li><a href="gallery.html">Galleria Foto</a></li>
         <li><a href="eventi.html">Eventi</a></li>
         <li><a href="#contatti" class="mobile-only">Contatti</a></li> <!-- SOLO SU MOBILE -->
@@ -128,16 +129,12 @@
     </div>
   </div>
 
-  <div class="contatti-grid" style="margin-top: 40px;">
+
+  <div class="contatti-grid">
+    <!-- COLONNA SINISTRA - Form -->
     <div class="contatti-card">
       <h3>Inviaci un Messaggio</h3>
-      <form action="https://formsubmit.co/info@adicuneo.it" method="POST">
-        <!-- FormSubmit Configuration -->
-        <input type="hidden" name="_subject" value="Nuovo messaggio dal sito ADI Cuneo">
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_template" value="table">
-        <input type="hidden" name="_next" value="https://tuosito.com/grazie.html">
-
+      <form action="invia_email.php" method="POST">
         <div class="form-group">
           <label for="nome">Nome e Cognome *</label>
           <input type="text" id="nome" name="nome" required>
@@ -174,8 +171,7 @@
       </form>
     </div>
 
-
-
+    <!-- COLONNA DESTRA - Card informative -->
     <div>
       <div class="contatti-card">
         <h3>🙏 Hai Bisogno di Preghiera?</h3>
