--- a/illuminiamo.html
+++ b/illuminiamo.html
@@ -69,7 +69,7 @@
 
         <h3>I Nostri Obiettivi</h3>
         <ul>
-          <li>Raccontare, attraverso storie, delle verità bibbile</li>
+          <li>Raccontare, attraverso storie, delle verità bibliche</li>
           <li>Creare giochi sani in un ambiente sano</li>
           <li>Stimolare l'apprendimento attraverso il gioco educativo</li>
           <li>Insegnare tramite l'apprendimento della parola di Dio</li>
@@ -107,7 +107,7 @@
         <div class="activity-card hidden">
           <span class="activity-icon">🤝</span>
           <h3>Giochi di Gruppo</h3>
-          <p>Attività che promuovono la collaborazione, l'amicizia e i valori bibblici.</p>
+          <p>Attività che promuovono la collaborazione, l'amicizia e i valori biblici.</p>
         </div>
         
         <div class="activity-card hidden">
