--- a/contatti.html
+++ b/contatti.html
@@ -157,6 +157,7 @@
             <option value="info">Informazioni Generali</option>
             <option value="preghiera">Richiesta di Preghiera</option>
             <option value="evento">Informazioni su Eventi</option>
+            <option value="evento">Informazioni sulla bibbia</option>
             <option value="battesimo">Battesimo</option>
             <option value="altro">Altro</option>
           </select>
@@ -176,8 +177,7 @@
       <div class="contatti-card">
         <h3>🙏 Hai Bisogno di Preghiera?</h3>
         <p style="line-height: 1.7; margin-bottom: 20px;">
-          Siamo qui per pregare con te e per te. Se hai bisogno di sostegno spirituale o desideri condividere una
-          richiesta di preghiera, non esitare a contattarci.
+          Se hai un bisogno particolare, una necessità, ma non conosci ancora il Signore, scrivici una mail, saremo a disposizione con piacere.
         </p>
         <a href="mailto:info@adicuneo.it" class="button">Richiedi Preghiera</a>
       </div>
