--- a/contatti.html
+++ b/contatti.html
@@ -70,10 +70,10 @@
       </div>
 
       <div class="info-item">
-        <div class="info-icon">📞</div>
+        <div class="info-icon"><img src="img/insta_contatti.png" alt=""></div>
         <div class="info-content">
-          <h4>Telefono</h4>
-          <p><a href="tel:+390165123456">+39 0165 123456</a></p>
+          <h4>Instagram</h4>
+          <p><a href="https://www.instagram.com/adicuneo/">Adi Cuneo Insta</a></p>
         </div>
       </div>
 
